; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_draw.c_UITOOLS_DrawCheckedRect.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_draw.c_UITOOLS_DrawCheckedRect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i64, i64, i64, i64 }

@COLOR_BTNHIGHLIGHT = common dso_local global i32 0, align 4
@COLOR_BTNFACE = common dso_local global i32 0, align 4
@gpsi = common dso_local global %struct.TYPE_6__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_5__*)* @UITOOLS_DrawCheckedRect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UITOOLS_DrawCheckedRect(i32 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %7 = load i32, i32* @COLOR_BTNHIGHLIGHT, align 4
  %8 = call i64 @GetSysColor(i32 %7)
  %9 = call i64 @RGB(i32 255, i32 255, i32 255)
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %53

11:                                               ; preds = %2
  %12 = load i32, i32* %3, align 4
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = load i32, i32* @COLOR_BTNFACE, align 4
  %15 = call i32 @GetSysColorBrush(i32 %14)
  %16 = call i32 @FillRect(i32 %12, %struct.TYPE_5__* %13, i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = call i64 @RGB(i32 255, i32 255, i32 255)
  %19 = call i64 @SetBkColor(i32 %17, i64 %18)
  store i64 %19, i64* %6, align 8
  %20 = load i32, i32* %3, align 4
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** @gpsi, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call i64 @SelectObject(i32 %20, i64 %23)
  store i64 %24, i64* %5, align 8
  %25 = load i32, i32* %3, align 4
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 2
  %28 = load i64, i64* %27, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 3
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = sub nsw i64 %34, %37
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = sub nsw i64 %41, %44
  %46 = call i32 @PatBlt(i32 %25, i64 %28, i64 %31, i64 %38, i64 %45, i32 16384137)
  %47 = load i32, i32* %3, align 4
  %48 = load i64, i64* %5, align 8
  %49 = call i64 @SelectObject(i32 %47, i64 %48)
  %50 = load i32, i32* %3, align 4
  %51 = load i64, i64* %6, align 8
  %52 = call i64 @SetBkColor(i32 %50, i64 %51)
  br label %59

53:                                               ; preds = %2
  %54 = load i32, i32* %3, align 4
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %56 = load i32, i32* @COLOR_BTNHIGHLIGHT, align 4
  %57 = call i32 @GetSysColorBrush(i32 %56)
  %58 = call i32 @FillRect(i32 %54, %struct.TYPE_5__* %55, i32 %57)
  br label %59

59:                                               ; preds = %53, %11
  ret void
}

declare dso_local i64 @GetSysColor(i32) #1

declare dso_local i64 @RGB(i32, i32, i32) #1

declare dso_local i32 @FillRect(i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @GetSysColorBrush(i32) #1

declare dso_local i64 @SetBkColor(i32, i64) #1

declare dso_local i64 @SelectObject(i32, i64) #1

declare dso_local i32 @PatBlt(i32, i64, i64, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
